2008-05-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (on_playlist_change_name): Remove unused variables,
	spotted by Philip Withnall <pwithnall@svn.gnome.org>

2008-05-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (init_treeview),
	(totem_playlist_compare_with_monitor),
	(totem_playlist_file_changed), (totem_playlist_init),
	(totem_playlist_add_one_mrl), (totem_playlist_clear_with_compare),
	(totem_playlist_compare_with_mount),
	(totem_playlist_clear_with_g_mount): Monitor all the "native" files
	that get added to the playlist, and automatically remove the files
	that get deleted (Closes: #497996)

2008-05-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (init_treeview):
	* src/totem-playlist.h:
	* src/totem.c (on_playlist_change_name): Remove dead-code dating
	back from the audio CD support times

2008-05-24  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle): Check for the giosrc
	properly

2008-05-23  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require gmyth-upnp
	* src/plugins/mythtv/totem-mythtv.c (get_thumbnail),
	(totem_mythtv_list_recordings), (device_found_cb),
	(device_lost_cb), (totem_mythtv_update_binfo), (refresh_cb),
	(totem_mythtv_plugin_finalize): Patch by Renato Araujo Oliveira Filho
	<renatox@gmail.com> to use UPNP to discover GMyth servers, and avoid
	having any types of configuration to make (Closes: #516672)
	* src/plugins/mythtv/totem-mythtv.schemas.in: Remove

2008-05-23  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_launch_player), (totem_embedded_get_app_for_uri),
	(totem_embedded_update_menu), (on_open1_activate), (main):
	Use GIO and GDK to launch the full-blown player, startup notification
	only available with GTK+ 2.13 (Closes: #512587)
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle): Remove remains of gnome-vfs