@@ -1,3 +1,9 @@
+2008-05-25  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* src/plugins/youtube/youtube.py: Use higher-resolution YouTube
+	videos when the user's connection speed is suitably high.
+	(Closes: #521536)
+
 2008-05-25  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem.c (on_playlist_change_name): Remove unused variables,
